corrected alignment

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -2,7 +2,7 @@
      font-size: calc(.5 * (4vh + 9vw));
 }
 .sub-heading{
-     font-size: calc(.6*(4vh+12vw)) !important;
+     font-size: calc(.4*(4vh+10vw));
 }
 .floating-pic, .floating-pic img,.floating-pic svg{
      width:100%;
@@ -43,7 +43,7 @@ div{
      right: 0;
      top:0;
      height: 100vh;
-     font-size: calc(0.4*(7vh+4vw));
+     font-size: 18px;
      border: 1px solid black;
 }
 .my-pic img{
@@ -68,6 +68,6 @@ div{
      }
 }
 .social-links img{
-     width:100%;
-     height:90%;
+     width:28px;
+     height:28px;
 }
